blog post, nav bar, slider, footer, home, routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>{{ helloWorld }}</h1>
+<app-nav-bar title="Max's blog"></app-nav-bar>
 
-  <app-posts></app-posts>
-</div>
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
