new menu, layout fixes

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <main class="container text-center my-5">
   <h3>Page not found</h3>
 
-  <a class="btn btn-default" routerLink="/">Go to home page</a>
+  <a class="btn btn-dark mt-2" routerLink="/">Go to home page</a>
 </main>
