--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -16,9 +16,9 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-center">
-      <a class="p-2 link-secondary" href="#">Home</a>
-      <a class="p-2 link-secondary" href="#">Contact me</a>
-      <a class="p-2 link-secondary" href="#">About</a>
+      <a class="p-2 link-secondary" routerLink="/">Home</a>
+      <a class="p-2 link-secondary" routerLink="/contact-me">Contact me</a>
+      <a class="p-2 link-secondary" routerLink="/about">About</a>
     </nav>
   </div>
 </div>
