post preview update, fonts

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,8 +1,12 @@
 <article class="blog-post">
-  <h2 class="blog-post-title"><a routerLink="/post/{{ postId }}">{{ title }}</a></h2>
-  <p class="blog-post-meta">December 14, 2020 by <a href="#">@itmax</a></p>
+  <h2 class="blog-post-title"><a routerLink="/post/{{ post.id }}">{{ post.title }}</a></h2>
+  <p class="blog-post-meta">{{ post.date }} by <a href="#">@{{ post.author.username }}</a></p>
 
-  <p class="blog-post-text" ng-bind-html="formattedText">{{ text.substr(0, 160) }}...</p>
+  <div class="col-12 my-2 blog-post-image rounded">
+    <img [src]="post.picture" [alt]="post.title" />
+  </div>
 
-  <a class="blog-post-read-more" routerLink="/post/{{ postId }}">Read more...</a>
+  <p class="blog-post-text" ng-bind-html="formattedText">{{ post.text.split(' ').slice(0, 26).join(' ') }}...</p>
+
+  <a class="blog-post-read-more" routerLink="/post/{{ post.id }}">Read more...</a>
 </article>
