--- a/src/app/blog-post/blog-post.component.html
+++ b/src/app/blog-post/blog-post.component.html
@@ -2,7 +2,7 @@
   <div class="row d-flex justify-content-center">
     <article class="blog-post col-md-10 col-lg-8 col-xl-6">
       <h2 class="blog-post-title">{{ post.title }}</h2>
-      <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
+      <p class="blog-post-meta">{{ post.date }} by <a href="#">@{{ post.author.username }}</a></p>
     
       <p class="blog-post-text">{{ post.text }}</p>
 
