--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -15,6 +15,18 @@
   color: rgba(117, 117, 117, 1);
   font-size: 17px;
 }
+.blog-post-image {
+  max-height: 60vh;
+  min-height: 200px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blog-post-image img {
+  max-width: 100%;
+  max-height: 100%;
+}
 .blog-post-text {
   font-weight: 400;
   font-size: 21px;
