--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let post of posts; let i = index">
-  <app-post [postId]="post.id" [title]="post.title" [text]="post.text"></app-post>
+  <app-post [post]="post"></app-post>
 </div>
