--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -2,6 +2,6 @@
   <div class="col-md-6 px-0">
     <h1 class="display-4">{{ title }}</h1>
     <p class="lead my-3">{{ text }}</p>
-    <p class="lead mb-0"><a [routerLink]="link" class="text-white fw-bold">{{ linkText }}</a></p>
+    <p class="lead mb-0"><a [routerLink]="link" class="fw-bold btn btn-light">{{ linkText }}</a></p>
   </div>
 </div>
