--- a/src/app/blog-post/blog-post.component.html
+++ b/src/app/blog-post/blog-post.component.html
@@ -2,7 +2,11 @@
   <div class="row d-flex justify-content-center">
     <article class="blog-post col-md-10 col-lg-8 col-xl-6">
       <h2 class="blog-post-title">{{ post.title }}</h2>
-      <p class="blog-post-meta">{{ post.date }} by <a href="#">@{{ post.author.username }}</a></p>
+      <p class="blog-post-meta">{{ formattedDate }} by <a href="#">@{{ post.author.username }}</a></p>
+
+      <div class="col-12 mt-2 mb-4 blog-post-image">
+        <img [src]="post.picture" [alt]="post.title" class="rounded" />
+      </div>
     
       <p class="blog-post-text">{{ post.text }}</p>
 
