--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -25,7 +25,7 @@
 }
 .blog-post-image img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 60vh;
 }
 .blog-post-text {
   font-weight: 400;
