about me, contact me pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,7 @@
 <main class="container">
   <app-slider 
     title="Welcome to my blog"
-    text="Check out my latest post"
-    link="/post/3"
-    linkText="Read now"
+    text="Hope you'll enjoy"
     >
   </app-slider>
 
