--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,9 @@
+<form class="col-12 d-flex justify-content-end align-items-center mb-3" (submit)="handleSubmit($event)">
+  <div class="input-group">
+    <input type="text" class="form-control" id="search-query" placeholder="Article title" aria-label="Article name" aria-describedby="button-search">
+    <button class="btn btn-outline-secondary" type="submit" id="button-search"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg></button>
+  </div>
+</form>
 <div *ngFor="let post of posts; let i = index">
   <app-post [post]="post"></app-post>
 </div>
