--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,18 +1,9 @@
 <div class="container">
   <header class="blog-header py-3">
     <div class="row flex-wrap justify-content-between align-items-center">
-      <div class="d-xs-none d-sm-none d-md-block col-md-4 pt-1">
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+      <div class="col-12 text-center">
         <a class="blog-header-logo text-dark" routerLink="/">{{ title }}</a>
       </div>
-      <div class="d-xs-block d-none col-12 mt-3"></div>
-        <form class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-end align-items-center" (submit)="handleSubmit($event)">
-          <div class="input-group">
-            <input type="text" class="form-control" id="search-query" placeholder="Article title" aria-label="Article name" aria-describedby="button-search">
-            <button class="btn btn-outline-secondary" type="submit" id="button-search"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg></button>
-          </div>
-        </form>
     </div>
   </header>
 
