--- a/src/app/related-post/related-post.component.html
+++ b/src/app/related-post/related-post.component.html
@@ -1,9 +1,9 @@
 <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
   <div class="col p-4 d-flex flex-column position-static">
-    <strong class="d-inline-block mb-2 text-primary">Blog</strong>
-    <h3 class="mb-0">Featured post</h3>
-    <div class="mb-1 text-muted">Nov 12</div>
-    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-    <a routerLink="/post/" class="stretched-link">Read more...</a>
+    <strong class="d-inline-block mb-2 text-primary">@{{ post.author.username }}</strong>
+    <h3 class="mb-0">{{ post.title }}</h3>
+    <div class="mb-1 text-muted">{{ formattedDate }}</div>
+    <p class="card-text mb-auto">{{ post.text.split(' ').slice(0, 8).join(' ') }}</p>
+    <a routerLink="/post/{{ post.id }}" class="stretched-link">Read more...</a>
   </div>
 </div>
