--- a/src/app/related-posts/related-posts.component.html
+++ b/src/app/related-posts/related-posts.component.html
@@ -1,11 +1,8 @@
-<div class="row">
+<div class="row" *ngIf="relatedPosts.length !== 0">
   <div class="col-md-12 mb-3">
     <h3>Related posts</h3>
   </div>
-  <div class="col-md-6">
-    <app-related-post></app-related-post>
-  </div>
-  <div class="col-md-6">
-    <app-related-post></app-related-post>
+  <div class="col-md-6" *ngFor="let post of relatedPosts; let i = index">
+    <app-related-post [post]="post"></app-related-post>
   </div>
 </div>
