author page + fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
       <h2 class="about-me-title">Hi, my name is Max Dmitriev</h2>
 
       <div class="col-12 mt-2 mb-4 about-me-image">
-        <img src="/assets/photo.jpg" alt="ssss" class="rounded" />
+        <img src="/assets/photo.jpg" alt="Max Dmitriev" class="rounded" />
       </div>
 
       <h3>About me</h3>
