--- a/client/src/app/nav-bar/nav-bar.component.html
+++ b/client/src/app/nav-bar/nav-bar.component.html
@@ -12,6 +12,7 @@
       <a class="p-2 link-secondary" routerLink="/">Home</a>
       <a class="p-2 link-secondary" routerLink="/contact-me">Contact me</a>
       <a class="p-2 link-secondary" routerLink="/about">About</a>
+      <a class="p-2 link-secondary" routerLink="/create-post">Create post</a>
     </nav>
   </div>
 </div>
